[package]
name = "drcv"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum_typed_multipart = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
clap = { version = "4", features = ["derive"] }
byte-unit = "5"
bytes = "1"
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
igd = "0.12"
local-ip-address = "0.6"
