[package]
name = "drcv"
version = "0.2.0"
edition = "2021"

description = "DRCV: Direct and Resumable Connection Vault"
license = "MIT" 
repository = "https://github.com/lqez/drcv"
readme = "README.md"
keywords = ["rust"]
categories = ["command-line-utilities"]
exclude = ["website/", "docs/", "*.md", "!README.md"]

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum_typed_multipart = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
clap = { version = "4", features = ["derive"] }
byte-unit = "5"
bytes = "1"
tokio-stream = "0.1"
rand = "0.8"
dirs = "5"
regex = "1"
once_cell = "1"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
